# SDH-Ludusavi

./: .envrc  .gitignore  .npmrc  .protocol  AGENTS.md  ARCHIVE_README.md  DEVELOPMENT.md  LICENSE  NOTICE  NOTICE.md  README.md  apply_runtime_boundaries.py  clean_up_code.py  create_steam_runtime.py  decky.pyi  expand_tests.py  fix_duplicate.py  fix_frontend_rpc.py  fix_newlines.py  fix_ruff.py  fix_sanitize_name.py  fix_scope.py  fix_test.py  fix_test2.py  fix_test_updater.py  fix_ts_errors.py  fix_updater_excepts.py  main.py  orchestration.conf  package.json  patch_test.py  patch_test_2.py  plugin.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  rollup.config.js  run.sh  tsconfig.json  update_controller.py  (+5 more)
.github/workflows/: ci.yml  dev-release.yml  release.yml
defaults/: defaults.txt
docs/: ARCHIVE.md  animated-status-icons-reference.html  sdh_ludusavi_flow.html  status_bar_game_state_flows.html
docs/agent_conversations/: 2026-05-10_backend_hardening.json  2026-05-10_decky_log_modal.json  2026-05-10_decky_plugin_zip.json  2026-05-10_flatpak_discovery_and_toggle.json  2026-05-10_flatpak_user_install_discovery.json  2026-05-10_package_dist_directory.json  2026-05-10_readme_status_messages.json  2026-05-10_rename_project_directory_precommit.json  2026-05-10_runtime_ludusavi_integration.json  2026-05-10_sdh_ludusavi.json  2026-05-10_sdh_ludusavi_version_display.json  2026-05-10_template_cleanup.json  2026-05-11_frontend_refinement_and_logging.json  2026-05-12_auto_sync_feedback.json  2026-05-12_pyludusavi_version_update.json  2026-05-12_pyludusavi_version_update_v2.json  2026-05-12_refactor_ludusavi_discovery.json  2026-05-12_update_loading_ui.json  2026-05-13_auto_push_to_deck.json  2026-05-13_backup_restore_status_ui.json  2026-05-13_final_merge_and_cleanup.json  2026-05-13_fix_eager_autosync_backup.json  2026-05-13_fix_hidden_shortcut.json  2026-05-13_fix_non_installed_games_dropdown.json  2026-05-13_fix_redundant_sudo_and_logging.json  2026-05-13_limit_dropdown_to_installed_games.json  2026-05-13_ludusavi_launcher.json  (+218 more)
scripts/: analyze_plugin_logs.py  check_frontend_supply_chain.sh  check_pnpm_install_scripts.py  check_tdd.sh  deck_screenshot.sh  package_plugin.py  post_commit.sh  post_release_sync.sh  pre_commit.sh  pull_plugin_logs.py  quality_gates.sh  release_notes.py  request_dev_release.sh  set_release_version.py  validate_plugin_zip.py  version_guard.py
src/: assets.d.ts  index.css  index.tsx  ludusaviLauncher.ts  shortcutArtwork.ts
tests/: test___init__.py  test__types.py  test_activity.py  test_adapter_cache.py  test_analyze_plugin_logs.py  test_api.py  test_architectural_constraints.py  test_architecture.py  test_backup_browser.py  test_backup_decision.py  test_backup_list_filter.py  test_compatibility.py  test_config.py  test_constants.py  test_coordinator.py  test_decision_logging.py  test_deck_screenshot.py  test_exception_boundaries.py  test_folders.py  test_frontend_static.py  test_future_exception_cleanup.py  test_game_names.py  test_gateway.py  test_history.py  test_history_fixes.py  test_history_integration.py  test_installed_games_only.py  test_issue_10_sanitization.py  test_issue_1_matching.py  test_issue_2_state_load.py  test_issue_3_refresh_robustness.py  test_issue_4_timeout.py  test_issue_5_env_logging.py  test_issue_6_env_scoping.py  test_issue_7_cancellation.py  test_issue_8_ui_error.py  test_last_operation_date_display.py  test_last_operation_sync.py  test_launch_gate.py  test_launch_gate_acquire.py  (+56 more)
(+523 files in other folders)
